--- a/src/styles/SASS/components/_Dropdown.scss
+++ b/src/styles/SASS/components/_Dropdown.scss
@@ -4,7 +4,7 @@
     top: calc($header-height + 1px);
     right: 0;
     bottom: 0;
-    left: 1rem;
+    left: 0;
     z-index: 2; 
 }
 
